--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	<div id="page-wrapper">
 
 	<header>
-		<div class="mainversion"><b>~ 0.4.16 ~ Alpha</b></div>
+		<div class="mainversion"><b>~ 0.4.17 ~ Alpha</b></div>
 		<div class="mainlogo"><small>COSMIC FIELDS</small></div>
 	</header>
 
@@ -41,7 +41,7 @@
 	</div>
 
 	<div class="CenterBar">
-		Blender LTS - 2.83.3 Stable / 2.83.4 Queued
+		Blender LTS - 2.83.4 Stable / 2.83.5 Beta
 		<br>Blender 2.90 - Beta
 		<br>Blender 2.91 - Alpha
 	</div>
