--- a/index.html
+++ b/index.html
@@ -41,9 +41,10 @@
 	</div>
 
 	<div class="CenterBar">
-		Blender LTS - 2.83.4 Stable / 2.83.5 Beta
-		<br>Blender 2.90 - Beta
-		<br>Blender 2.91 - Alpha
+		Blender 2.83.9 - LTS
+		<br>Blender 2.90.1 - Stable
+		<br>Blender 2.91 - Beta
+		<br>Blender 2.92 - Alpha
 	</div>
 
 	</div>
